4th commit (editing xml files login/regist & class login/regist; google acc sign in/up)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="nohp">Nomor Telepon</string>
     <string name="notlportu">Nomor Telepon Orang Tua</string>
     <string name="empty">Belum Ada Data</string>
+    <string name="google_sign_in">Akun Google</string>
 </resources>
